go/static/css/styles.css
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 80px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f5f5f5;
}
.valign-center {
  height: 60px;
  line-height: 60px;
}
.valign-center span {
  display: inline-block;
  vertical-align: middle;
  line-height: normal;
}
.asteriskField {
    display: none;
}

